--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        // TODO: Add androidX support, fetch code from Reality CheckerZ
     }
     buildTypes {
         release {
@@ -25,10 +26,9 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     //implementation 'com.google.firebase:firebase-core:16.0.9'
-    //implementation 'com.google.firebase:firebase-messaging:18.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation 'com.google.android.gms:play-services-ads:17.2.1'
+    implementation 'com.google.android.gms:play-services-ads:19.0.0'
 }
